style.css
/**
 * Copyright (c) 2011 Rusmin Soetjipto
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 *
 * 7-25-14 Yvonne Lu removed left border from blockquote

 */

@CHARSET "UTF-8";

BIG.usfm { margin: 0;
           padding: 0;
         }
P.usfm-indent { margin: 0;
                padding: 0 0 0.25em 0;
                text-indent: 1.25em;
                clear: right;
              }
P.usfm-hanging { margin: 0;
                 padding: 0 0 0.25em 3em;
                 text-indent: -3em;
                 clear: right;
               }
P.usfm-flush,
P.usfm-footer { margin: 0;
                padding: 0 0 0.25em 0;
                clear: right;
              }
P.usfm-desc { margin: 0;
              padding: 0 3em 0.25em 0;
              width: 75%;
              text-align: justify;
              clear: right;
            }
P.usfm-right { margin: 0;
               padding: 0 0 0.25em 25%;
               clear: right;
             }
P.usfm-center { margin: 0;
                padding: 0 20% 0.25em 20%;
                clear: right;
              }
H1.usfm, H2.usfm,
H3.usfm, H4.usfm,
H5.usfm, H6.usfm { margin: 0.25em 0 0.25em 0;
                   padding: 0;
}

BLOCKQUOTE.usfm { margin: 0 0.5em 0 1.5em;
                  padding: 0;
                  border-left: none;
                  
                }
SUP.usfm,
SPAN.usfm-f1, 
SPAN.usfm-f2,
SPAN.usfm-v { height: 0;
              line-height: 1;
              vertical-align: baseline;
              _vertical-align: bottom;
              position: relative;
              bottom: 1ex;
              font-size: smaller;
             }
SPAN.usfm-c { float: left; 
              margin: 0 0.25em 0 0;
              padding: 0;
              line-height: 2.5em;
              top: 0.5em;
}
SPAN.usfm-c-indent { float: left; 
                     margin: 0 0.25em 0 -1.25em;
                     padding: 0;
                     line-height: 2.5em;
                     top: 0.5em;
                   }
SPAN.usfm-selah { float: right;
                  padding: 0 0 0 10em;
                  margin: 0;
                }
TD.usfm-tc,
TD.usfm-th { padding-right: 1.5em; }

